@@ -85,3 +85,11 @@ HORAS TRABALHADAS: 4h
 - Bugfixes com javascript no IE
 
 HORAS TRABALHADAS: 1h
+
+==========
+16/05/2009
+==========
+
+- Correcoes no cadastro de feeds
+
+HORAS TRABALHADAS: 2h
